# exed

./: .gitignore  README.md  mix.exs
lib/: exed.ex
lib/exed/: command.ex
lib/exed/native/: command.ex
native/exed/: Cargo.toml  README.md
native/exed/src/: exed_command.rs  lib.rs
test/: exed_test.exs
test/exed/: command_test.exs
